# mousetrap

./: .gitignore  .project  .pydevproject  AUTHORS  ChangeLog  HACKING  MAINTAINERS  MANIFEST.in  MANTAINERS  Makefile.am  README  README.md  README.windows.md  acinclude.m4  aclocal.m4  autogen.sh  configure.ac  configure.am  configure.in  gnome-autogen.sh  mousetrap.desktop.in  mousetrap.doap  mousetrap.pot  pylintrc  run.py  run_pylint.sh.in  runtests.py  setup.py
dev_tools/: idm_example.py
docs/: MouseTrap.dia~  index.page  uses.page
docs/.svn/: entries
docs/developer/: autotools.md
docs/docbook/: hMode.xml  legal.xml  mousetrap.xml  pref.xml  starting.xml  use.xml
docs/docbook/.svn/: entries
docs/docbook/figures/.svn/: entries
docs/doxygen/: Doxyfile.in
docs/doxygen/.svn/: entries
docs/man/.svn/: entries
docs/pydoc/.svn/: entries
images/: Makefile.am
images/.svn/: entries
old/docs/: toc.page
old/docs/docbook/: intro.xml
old/docs/pydoc/: Makefile.am
old/po/: LINGUAS  ca.po  ca@valencia.po  es.po  he.po  id.po  lv.po  nb.po  pl.po  pt_BR.po  ro.po  sr.po  zh_CN.po
old/samples/: idm_example.py
old/src/mousetrap/: __init__.py
old/src/mousetrap/addons/: Makefile.am
old/src/mousetrap/app/: commons.py  debug.py
old/src/mousetrap/app/addons/: Makefile.am  cpu.py  handler.py  recalc.py
old/src/mousetrap/app/lib/: settings.py
old/src/mousetrap/app/ui/: Makefile.am  main.py  settings_gui.py  widgets.py
old/src/mousetrap/app/ui/scripts/: Makefile.am  screen.py
old/src/mousetrap/core/: camera.py  heads_up_display.py  motion_tracker.py  pointer.py  settings.py  test_camera.py  tracker.py
old/src/mousetrap/ocvfw/: Makefile.am  __init__.py  _ocv.py  commons.py
old/src/mousetrap/ocvfw/haars/: Makefile.am
old/src/mousetrap/ocvfw/idm/: color.py
po/: LINGUAS  POTFILES  POTFILES.in  cs.po  da.po  de.po  el.po  es.po  fr.po  gl.po  hu.po  pt_BR.po  ru.po  sl.po  sr@latin.po
po/.svn/: entries
po/.svn/text-base/: LINGUAS.svn-base
samples/: userSettings.cfg
src/: .emacs.desktop  Makefile.am  run_python_tests.py  test.py
src/mouseTrap/: Makefile.am  cam.py  debug.py  dialogs.py  environment.py.in  events.py  mTDbus.py  mTServer.py  mTSettings.py  mTi18n.py.in  mainGui.py  mouse.py  mouseTrap.py  mouseTrapPref.py  mousetrap.in  ocvfw.py  prefGui.py  profiling.py  scripts.py
src/mouseTrap/haarcascade/: Makefile.am
src/mouseTrap/scripts/: Makefile.am
src/mouseTrap/scripts/profiles/: Makefile.am  dragProfile.py  holdProfile.py  screenProfile.py
src/mousetrap/: Makefile.am  __init__.py  camera.py  compat.py  config.py  config_default.yaml  controller.py  core.py  debug.py  environment.py  environment.py.in  gui.py  i18n.py  image.py  initialize_logging.py  inplace_runner.py  log.py  main.py  main.py.1  mouse.py  mousetrap  mousetrap.in  mousetrap.py  mousetrap.yaml  nose_locator_sample.py  pointer.py  pylintrc  start  test_camera.py  test_mouse.py  test_pointer.py  test_vision.py  vision.py
src/mousetrap/addons/: .cpu_control.py.swp  Makefile.am  recalc.py
src/mousetrap/app/: Makefile.am  commons.py  debug.py  environment.py.in  main.py  mousetrap.in
src/mousetrap/app/addons/: cpu.py  handler.py  recalc.py
src/mousetrap/app/lib/: Makefile.am  dbusd.py  httpd.py  mouse.py  settings.py
src/mousetrap/app/ui/: dialogs-newGTK.py  dialogs.py  main.py  settings_gui.py  widgets.py
src/mousetrap/app/ui/scripts/: Makefile.am  __init__.py  color.py  joystick.py  screen.py
src/mousetrap/core/: Makefile.am  camera.py  feature_detector.py  image_library.py  pointer_manager.py  test_camera.py
src/mousetrap/haars/: Makefile.am
src/mousetrap/lib/: Makefile.am  dbusd.py  httpd.py  mouse.py  settings.py
src/mousetrap/locale/en/LC_MESSAGES/: Makefile  Makefile.am  mousetrap.po
src/mousetrap/ocvfw/: Makefile.am  _ocv.py  pocv.py
src/mousetrap/ocvfw/backends/: Makefile.am  OcvfwCtypes.py  OcvfwPython.py
src/mousetrap/ocvfw/dev/: Makefile.am  camera.py
src/mousetrap/ocvfw/idm/: Makefile.am  color.py  eyes.py  finger.py  forehead.py
src/mousetrap/parts/: camera.py  display.py  eyes.py  interface.py  nose.py  nose_joystick.py
src/mousetrap/plugins/: Makefile.am  camera.py  display.py  eyes.py  interface.py  nose.py  nose_joystick.py
src/mousetrap/pointers/: eyes.py  interface.py  nose.py  nose_joystick.py
src/mousetrap/tests/: __init__.py  nose_locator_sample.py  run_python_tests.py  test_config.py  test_core.py  test_gui.py  test_mouse_pointer.py  test_pointer.py  test_vision.py
src/mousetrap/ui/: Makefile.am  dialogs.py  i18n.py  i18n.py.in  main.py  settings_gui.py  widgets.py
src/mousetrap/ui/scripts/: Makefile.am  color.py  screen.py
src/ocvfw/: Makefile.am  _ocv.py  commons.py  debug.py  pocv.py
src/ocvfw/backends/: Makefile.am  OcvfwBase.py  OcvfwPython.py
src/ocvfw/dev/: Makefile.am  camera.py
src/ocvfw/haars/: Makefile.am
src/ocvfw/idm/: Makefile.am  __init__.py  color.py  eyes.py  finger.py  forehead.py
