AC_INIT(ChangeLog)


CURRENT_DIR=$PWD
MOUSETRAP_VERSION=0.3
AM_INIT_AUTOMAKE(mouseTrap, $MOUSETRAP_VERSION)
AC_SUBST(MOUSETRAP_VERSION)
AC_SUBST(CURRENT_DIR)

# libtool versioning
LT_CURRENT=0
LT_REVISION=0
LT_AGE=0
LT_VERSION_INFO='-version-info ${LT_CURRENT}:${LT_REVISION}:${LT_AGE}'
AC_SUBST(LT_VERSION_INFO)
AC_SUBST(LT_RELEASE)
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

dnl Specify a header configuration file
AM_CONFIG_HEADER(config.h)

dnl Initialize maintainer mode
AM_MAINTAINER_MODE

dnl Gettext stuff

GETTEXT_PACKAGE=mousetrap
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package])
AM_GLIB_GNU_GETTEXT

IT_PROG_INTLTOOL([0.35.0])

dnl Checks for programs
AC_PROG_CC
AC_PROG_INSTALL
AC_ISC_POSIX

dnl Initialize libtool
AM_DISABLE_STATIC
AM_PROG_LIBTOOL

# Check for Python

AM_PATH_PYTHON(2.4)

# Find the headers needed to build extensions

AM_CHECK_PYTHON_HEADERS(,[AC_MSG_ERROR(Could not find python headers needed to build Python extensions)])

# Find the modules used by mouseTrap

AM_CHECK_PYMOD(gettext,,,[AC_MSG_ERROR(Could not find python module gettext)])
AM_CHECK_PYMOD(getopt,,,[AC_MSG_ERROR(Could not find python module getopt)])
AM_CHECK_PYMOD(Xlib,,,[AC_MSG_ERROR(Could not find python module Xlib)])
AM_CHECK_PYMOD(pyatspi,,,[AC_MSG_ERROR(Could not find python module Xlib)])
AM_CHECK_PYMOD(opencv,,,[AC_MSG_ERROR(Could not find python module opencv)])

AM_CONDITIONAL(WITH_LOUIS, test x$have_liblouis = "xyes")

AC_SUBST(mouseTrap_LIBS)
AC_SUBST(mouseTrap_CFLAGS)

PYDOC_CHECK()
DOXYGEN_CHECK()
DOCBOOK_CHECK()

#mouseTrap.spec

AC_OUTPUT([ 
Makefile
mousetrap.desktop
po/Makefile.in
docs/Makefile
docs/man/Makefile
docs/pydoc/Makefile
docs/docbook/Makefile
docs/doxygen/Makefile
docs/doxygen/Doxyfile
images/Makefile
src/Makefile
src/mouseTrap/Makefile
src/mouseTrap/haarcascade/Makefile
src/mouseTrap/scripts/Makefile
src/mouseTrap/scripts/profiles/Makefile
src/mouseTrap/mousetrap
src/mouseTrap/mTi18n.py
src/mouseTrap/environment.py
])
