
mouseTrap_SCRIPTS = \
	mousetrap

mouseTrapdir=$(bindir)

mouseTrap_pathdir=$(pyexecdir)

mouseTrap_python_PYTHON = \
	cam.py \
	debug.py \
	dialogs.py \
	environment.py \
	events.py \
	__init__.py \
	mainGui.py \
	mouse.py \
	mouseTrapPref.py \
	mouseTrap.py \
	mTi18n.py \
	mTDbus.py \
	mTServer.py \
	mTSettings.py \
	ocvfw.py \
	prefGui.py \
	profiling.py \
	scripts.py
 

SUBDIRS = haarcascade scripts

mouseTrap_pythondir=$(pyexecdir)/mouseTrap
