mouseTrap_pathdir=$(pyexecdir)

mouseTrap_python_PYTHON = \
	frontalEyes35x16.xml \
	haarcascade_frontalface_alt2.xml \
	haarcascade_frontalface_alt_tree.xml \
	haarcascade_frontalface_alt.xml \
	haarcascade_frontalface_default.xml \
	haarcascade_eye_tree_eyeglasses.xml \
	Mouth.xml

mouseTrap_pythondir=$(pyexecdir)/ocvfw/haars
